filtré les rendez vous et les dossier par today et motif