@@ -1,8 +1,10 @@
+// src/main/java/com/example/mobileproject/service/MedicalRecordService.java
 package com.example.mobileproject.service;
 
 import com.example.mobileproject.dto.MedicalRecordDTO;
 import com.example.mobileproject.entity.Appointment;
 import com.example.mobileproject.entity.MedicalRecord;
+import com.example.mobileproject.entity.Motif;
 import com.example.mobileproject.repository.AppointmentRepository;
 import com.example.mobileproject.repository.MedicalRecordRepository;
 import jakarta.persistence.EntityNotFoundException;
@@ -10,8 +12,9 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,9 +23,12 @@ public class MedicalRecordService {
     private final MedicalRecordRepository recordRepo;
     private final AppointmentRepository  appointmentRepo;
 
+    /* -------------------- CRUD principal -------------------- */
+
     @Transactional
     public MedicalRecordDTO createForAppointment(Long appointmentId,
                                                  MedicalRecordDTO dto) {
+
         Appointment appt = appointmentRepo.findById(appointmentId)
                 .orElseThrow(() -> new EntityNotFoundException(
                         "Appointment not found: " + appointmentId));
@@ -44,22 +50,19 @@ public class MedicalRecordService {
                 .content(dto.content())
                 .build();
 
-        rec = recordRepo.save(rec);
-        return toDto(rec);
+        return toDto(recordRepo.save(rec));
     }
 
     @Transactional(readOnly = true)
     public MedicalRecordDTO getByAppointment(Long appointmentId) {
-        MedicalRecord rec = recordRepo
-                .findByAppointment_Id(appointmentId)
+        return recordRepo.findByAppointment_Id(appointmentId)
+                .map(this::toDto)
                 .orElseThrow(() -> new EntityNotFoundException(
                         "MedicalRecord not found for appointment " + appointmentId));
-        return toDto(rec);
     }
 
     @Transactional
-    public MedicalRecordDTO update(Integer recordId,
-                                   MedicalRecordDTO dto) {
+    public MedicalRecordDTO update(Integer recordId, MedicalRecordDTO dto) {
         MedicalRecord rec = recordRepo.findById(recordId)
                 .orElseThrow(() -> new EntityNotFoundException(
                         "MedicalRecord not found: " + recordId));
@@ -71,22 +74,13 @@ public class MedicalRecordService {
         rec.setDescription(dto.description());
         rec.setContent(dto.content());
 
-        rec = recordRepo.save(rec);
-        return toDto(rec);
+        return toDto(recordRepo.save(rec));
     }
 
     @Transactional(readOnly = true)
     public List<MedicalRecordDTO> historyForPatient(Long patientId) {
-        return recordRepo.findByPatient_Id(patientId).stream()
-                .map(this::toDto)
-                .collect(Collectors.toList());
-    }
-    @Transactional(readOnly = true)
-    public MedicalRecordDTO getById(Integer recordId) {
-        MedicalRecord rec = recordRepo.findById(recordId)
-                .orElseThrow(() -> new EntityNotFoundException(
-                        "MedicalRecord not found: " + recordId));
-        return toDto(rec);
+        return recordRepo.findByPatient_Id(patientId)
+                .stream().map(this::toDto).toList();
     }
 
     @Transactional
@@ -97,19 +91,64 @@ public class MedicalRecordService {
         }
         recordRepo.deleteById(recordId);
     }
-    private MedicalRecordDTO toDto(MedicalRecord rec) {
+
+    /* -------------------- Filtres pour « modes intelligents » -------------------- */
+
+
+    @Transactional(readOnly = true)
+    public List<MedicalRecordDTO> historyFiltered(Long docId, LocalDate date, Motif motif) {
+        if (date != null) {
+            // Utilise recordsForDay avec LocalDateTime
+            LocalDateTime start = date.atStartOfDay();
+            LocalDateTime end = date.plusDays(1).atStartOfDay();
+
+            return recordRepo.recordsForDay(docId, start, end, motif)
+                    .stream().map(this::toDto).toList();
+        }
+
+        // Sinon, utilise recordsFiltered avec LocalDate null
+        return recordRepo.recordsFiltered(docId, null, motif)
+                .stream().map(this::toDto).toList();
+    }
+
+
+    /** Dossiers créés aujourd’hui (optionnellement filtrés par motif). */
+
+    @Transactional(readOnly = true)
+    public List<MedicalRecordDTO> todayRecords(Long doctorId, Motif motif) {
+        LocalDate today = LocalDate.now();
+        return recordRepo.recordsFiltered(doctorId, today, motif)
+                .stream()
+                .map(this::toDto)
+                .toList();
+    }
+
+
+
+    /* -------------------- Mapper interne -------------------- */
+
+    private MedicalRecordDTO toDto(MedicalRecord r) {
         return new MedicalRecordDTO(
-                rec.getRecordId(),
-                rec.getPatient().getId(),
-                rec.getDoctor().getId(),
-                rec.getAppointment() != null
-                        ? rec.getAppointment().getId()
-                        : null,
-                rec.getRecordType().name(),
-                rec.getTitle(),
-                rec.getDescription(),
-                rec.getContent(),
-                rec.getDateCreated()
+                r.getRecordId(),
+                r.getPatient().getId(),
+                r.getDoctor().getId(),
+                r.getAppointment() == null ? null : r.getAppointment().getId(),
+                r.getRecordType().name(),
+                r.getTitle(),
+                r.getDescription(),
+                r.getContent(),
+                r.getDateCreated()
         );
     }
+    /* ----------------------------------------------------------------
+     *  Lecture simple d’un dossier par son id
+     * ---------------------------------------------------------------- */
+    @Transactional(readOnly = true)
+    public MedicalRecordDTO getById(Integer recordId) {
+        MedicalRecord rec = recordRepo.findById(recordId)
+                .orElseThrow(() -> new EntityNotFoundException(
+                        "MedicalRecord not found: " + recordId));
+        return toDto(rec);
+    }
+
 }
